# afri

./: .gitignore  .gitmodules  LICENSE  README.md  build.zig  build.zig.zon  prover.csv  pyproject.toml
results/: afri-prover.csv  afri-verifier.csv  astark-prover.csv  astark-verifier.csv  build.sh  fri-prover-hash.tex  fri-prover-sha3.csv  fri-prover-streebog.csv  fri-prover.csv  fri-verifier-hash.tex  fri-verifier-sha3.csv  fri-verifier-streebog.csv  fri-verifier.csv  fri-verifier.tex  prover.csv  prover.tex  stark-prover.csv  stark-prover.tex  stark-verifier.csv  stark-verifier.tex  verifier.csv
src/: afri.zig  bench.zig  common.zig  complex.zig  merkle.zig  root.zig
src/afri/: afri.zig  astark.zig  astark_bench.zig  bench.zig  challenger.zig  complex.zig  config.py  logging.py  merkle.zig  threads.zig  utils.zig
src/afri/cli/: main.py  run.py
src/fri/: bench.zig  challenger.zig  fft.zig  field.zig  fri.zig  merkle.zig  sha3.zig  stark.zig  stark_bench.zig  streebog.zig  utils.zig
src/plot/: logging.py
src/plot/cli/: main.py  run.py
